<resources>
    <string name="app_name">Fotosoft</string>
    <string name="upload_photos_on_the_go">Upload albums and photos</string>
    <string name="button_add_lab">Add Lab</string>
    <string name="my_labs">My Labs</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_reset">Reset</string>
    <string name="button_login">Login</string>
    <string name="or">------------------OR------------------</string>
    <string name="button_forgot_password">Forgot Password?</string>
    <string name="button_new_user_signup">New User? Sign Up</string>
    <string name="hint_party_name">Party Name *</string>
    <string name="hint_mobile">Mobile No. *</string>
    <string name="hint_email">Email</string>
    <string name="hint_signup_password">Password *</string>
    <string name="hint_confirm_password">Confirm Password *</string>
    <string name="hint_state">State</string>
    <string name="hint_address">Address</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_sign_up">Submit</string>
    <string name="progress_message">Please wait…</string>
    <string name="label_activity_login">Login</string>
    <string name="label_activity_signup">Sign Up</string>
    <string name="label_update">Update</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_about_us">About Us</string>
    <string name="btn_create_album">Create Album/Upload</string>
    <string name="btn_attach_images">Attach Images</string>
    <string name="btn_clear_images">Clear</string>
    <string name="hint_licence">Licence Key</string>
    <string name="button_submit">Submit</string>
    <string name="label_licence_key">Enter Licence Key</string>
    <string name="label_no_labs_found">No Labs found</string>
    <string name="error_username">Invalid Username</string>
    <string name="error_password">Invalid pssword</string>
    <string name="hint_album_name">Album name</string>
    <string name="hint_remarks">Remarks</string>
    <string name="btn_next">Next</string>
    <string name="label_create_album">Create Album</string>
    <string name="action_logout">Logout</string>
    <string name="label_spinner_product">Select Product</string>
    <string name="label_spinner_product_category">Select Product Category</string>
    <string name="label_spinner_paper">Select Paper</string>
    <string name="label_spinner_size">Select Size</string>
    <string name="label_spinner_bag">Select Bag</string>
    <string name="label_spinner_box">Select Box</string>
    <string name="label_spinner_cover">Select Cover</string>
    <string name="label_spinner_lamination">Select Lamination</string>
    <string name="label_activity_attach_images">Attach Images</string>
    <string name="hint_city">City *</string>
    <string name="hint_pincode">Pin Code</string>
    <string name="hint_login_id">Login Id *</string>
    <string name="menu_logout">Logout</string>
    <string name="label_activity_select_product">Select Product</string>
    <string name="date_to">Date To</string>
    <string name="date_from">Date From</string>
    <string name="ord_date_label">Ord. Date</string>
    <string name="product_label">Product</string>
    <string name="paper_label">Paper</string>
    <string name="lab_job_no_label">Lab Job No.</string>
    <string name="ord_no_label">Ord No.</string>
    <string name="size_label">Size</string>
    <string name="files_label">Files</string>
    <string name="job_status_label">Job Status</string>
    <string name="not_available">NA</string>
    <string name="no_orders_found">No orders found</string>
    <string name="button_go">Go</string>
    <string name="my_uploads">My Uploads</string>
    <string name="btn_cancel_upload">Cancel</string>
    <string name="total_files_label">Total Files</string>
    <string name="label_retry">Retry</string>
    <string name="btn_resume_upload">Resume</string>
    <string name="btn_pause_upload">Pause</string>
    <string name="error_invalid_party_name">Invalid Party Name</string>
    <string name="error_invalid_party_name_length">Minimum 5 characters required</string>
    <string name="error_invalid_address">Invalid Address</string>
    <string name="error_invalid_city">Invalid City</string>
    <string name="error_invalid_city_length">Minimum 3 characters required</string>
    <string name="error_invalid_pincode">Invalid Pincode</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_mobile">Invalid Mobile Number</string>
    <string name="error_invalid_login_id">Invalid Login Id</string>
    <string name="error_invalid_login_id_length">Minimum 5 characters required</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_invalid_password_length">Minimum 5 characters required</string>
    <string name="error_invalid_confirm_password">Inavalid Confirm Password</string>
    <string name="error_password_confirm_password_does_not_match">Password and confirm password does not match</string>
    <string name="check_availability">Check availability</string>
    <string name="helpline_numbers">Helpline Numbers:</string>
    <string name="complaints">Complaints :</string>
    <string name="contact_no_1">Contact No. 1 :</string>
    <string name="contact_no_2">Contact No. 2 :</string>
    <string name="delivery">Delivery :</string>
    <string name="remember_me">Remember me</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>

    <string-array name="spinner_data">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
    </string-array>

    <string-array name="state">
        <item>Select state</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Puducherry</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

</resources>