<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_my_orders_24"
            android:title="@string/menu_my_orders" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us_24"
            android:title="@string/menu_about_us" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/menu_logout" />
    </group>
</menu>