<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="@dimen/margin_8dp"
        android:text="@string/label_licence_key"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/licence_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/teal_200"
        app:hintTextColor="@color/teal_200"
        android:paddingHorizontal="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/licence_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_licence"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/button_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/button_submit"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>