<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appbar_layout"
        layout="@layout/app_bar" />

    <include
        android:id="@+id/lab_info"
        layout="@layout/layout_lab_info_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar_layout"/>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lab_info"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_attach_images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_500"
            android:text="@string/btn_attach_images"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_clear_images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_500"
            android:text="@string/btn_clear_images"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/images_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_buttons"
        android:layout_marginHorizontal="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/btn_create_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/margin_8dp"
        android:backgroundTint="@color/teal_500"
        android:text="@string/btn_create_album"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>